[package]
name = "all_together"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
classify_dots = {path="../classify_dots"}
motor_control = {path="../motor_control"}
read_cam = {path="../read_cam"}
solver = {path="../solver"}
pathfind = {path="../pathfind"}
minifb = "*"
log = "*"
eframe = "0.26.2"
bytes = "*"
env_logger = "*"